--- a/Proyecto-final/proyectoAngular/package.json
+++ b/Proyecto-final/proyectoAngular/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.0",
     "rxjs": "~7.8.0",
